# sejmAPI

./: .gitignore  LICENSE  README.md  clubs.py  interpellations.py  prints.py  pyproject.toml  terms.py  utils.py
sejmAPI/: __init__.py  clubs.py  committees.py  exceptions.py  interpellations.py  mp.py  prints.py  terms.py  utils.py  videos.py  votings.py
sejmAPI/eli/: __init__.py  acts.py  globals.py  utils.py
sejmAPI/sejm/: __init__.py  clubs.py  committees.py  groups.py  interpellations.py  mp.py  prints.py  proceedings.py  processes.py  questions.py  terms.py  utils.py  videos.py  votings.py
